# sonnerie

./: .gitignore  Cargo.toml  Changelog.md  LICENSE  README.md  file_format.md
.github/workflows/: rust.yml
escape_string/: Cargo.toml
escape_string/src/: lib.rs
examples/: get.rs
lender/: Cargo.toml
lender/src/: lib.rs
lines_from_request/: Cargo.toml
lines_from_request/src/: lib.rs
linestream/: Cargo.toml
linestream/src/: lib.rs
sonnerie-api/: Cargo.toml  README.md
sonnerie-api/src/: lib.rs  types.rs
src/: .dir-locals.el  block_file.rs  blocks.rs  bykey.rs  client.rs  create_tx.rs  database_reader.rs  db.rs  disk_wal.rs  formatted.rs  help.txt  key_reader.rs  lib.rs  main.rs  merge.rs  metadata.rs  rayon.rs  record.rs  records.rs  row_format.rs  segment.rs  segment_reader.rs  service.rs  tests.rs  wal.rs  wildcard.rs  write.rs
src/examples/: dump-segments.rs  get.rs
tests/: api.rs  normal.rs  protocol.rs
