[package]
name = "sonnerie"
version = "0.7.0"
authors = ["Charles Samuels <kalle@eventures.vc>", "e.ventures Management LLC"]
edition = "2021"
description = "An easy timeseries database"
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/njaard/sonnerie"
keywords = ["cli", "timeseries", "database"]
documentation = "https://docs.rs/sonnerie/"


[features]
default=["bin", "sonnerie-serve"]
bin = ["clap" ]
sonnerie-serve = ["clap","url","hyper","tokio","futures",
	"lines_from_request", "serde", "serde_derive", "shardio" ]

[dependencies]
memchr="2.4"
memmap="0.7"
static_init="1"
byteorder="1"
lz4="1"
chrono="0.4"
regex="1"
fs2="0.4"
antidote="1"
libc="0.2"
tempfile = "3"
tempfile-fast = "0.3"
escape_string = {version="0.1.0", path="escape_string"}
crossbeam = "0.8"
unsigned-varint={version="0.7", default-features=false }
clap = { version="2", optional=true }
url = { version="2", optional=true }
hyper = { version="0.14", optional=true, features=["server","http1","tcp","stream"] }
tokio={ version="1", features=["full"], optional=true }
futures = { version="0.3", optional=true }
lines_from_request={ version="0.3.0", path="lines_from_request", optional=true }
serde = { version="1", optional=true }
serde_derive = { version="1", optional=true }
shardio = { version="0.8", optional=true }
smallvec="1"
rayon="1.1"
either="1.6"

[dev-dependencies]
rand={version="0.8", features=["small_rng"]}
concat-idents="1"

[[bin]]
name="sonnerie"
required-features = ["bin"]

[[bin]]
name="sonnerie-serve"
required-features = ["sonnerie-serve"]

[package.metadata.deb]
section = "Databases"

