[package]
name = "lines_from_request"
version = "0.1.0"
authors = ["Charles Samuels <kalle@eventures.vc>"]
edition = "2018"
license = "BSD-2-Clause"
description = "Read lines from a socket"
repository = "https://github.com/njaard/sonnerie"
keywords = ["lines", "stream", "socket", "nonblocking"]
documentation = "https://docs.rs/lines_from_request/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper="0.12"
futures="0.1"
