[package]
name = "lines_from_request"
version = "0.3.0"
authors = ["Charles Samuels <kalle@eventures.vc>"]
edition = "2018"
license = "BSD-2-Clause"
description = "Read lines from a hyper Body in a blocking manner"
repository = "https://github.com/njaard/sonnerie"
keywords = ["lines", "stream", "socket", "nonblocking"]
documentation = "https://docs.rs/lines_from_request/"

[dependencies]
hyper={version="0.14", features=["stream"]}
futures="0.3"
