[package]
name = "sonnerie-api"
version = "0.1.0"
authors = ["Charles Samuels <kalle@eventures.vc>", "e.ventures Management LLC"]
license = "BSD-2-Clause"
description = "A client api to Sonnerie, a timeseries database"
repository = "https://github.com/njaard/sonnerie"
keywords = ["timeseries", "database", "protocol"]
documentation = "https://docs.rs/sonnerie-api/"

[dependencies]
chrono = "0.4.6"
escape_string = "0.1.0"

