[package]
name = "sonnerie-api"
version = "0.2.3"
authors = ["Charles Samuels <kalle@eventures.vc>", "e.ventures Management LLC"]
license = "BSD-2-Clause"
description = "A client api to Sonnerie, a timeseries database"
repository = "https://github.com/njaard/sonnerie"
keywords = ["timeseries", "database", "protocol"]
documentation = "https://docs.rs/sonnerie-api/"
readme = "README.md"

[dependencies]
chrono = "0.4.6"
escape_string = "0.1.0"

